loxParser.cpp

// Generated from ./lox.g4 by ANTLR 4.13.1



#include "loxParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LoxParserStaticData final {
  LoxParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LoxParserStaticData(const LoxParserStaticData&) = delete;
  LoxParserStaticData(LoxParserStaticData&&) = delete;
  LoxParserStaticData& operator=(const LoxParserStaticData&) = delete;
  LoxParserStaticData& operator=(LoxParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag loxParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
LoxParserStaticData *loxParserStaticData = nullptr;

void loxParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (loxParserStaticData != nullptr) {
    return;
  }
#else
  assert(loxParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LoxParserStaticData>(
    std::vector<std::string>{
      "program", "declaration", "classDec", "funDec", "varDec", "statement", 
      "exprStmt", "forStmt", "ifStmt", "printStmt", "returnStmt", "whileStmt", 
      "breakStmt", "continueStmt", "block", "expression", "assignment", 
      "logic_or", "logic_and", "equality", "comparison", "term", "factor", 
      "unary", "call", "primay", "function", "parameters", "arguments"
    },
    std::vector<std::string>{
      "", "'class'", "'('", "')'", "'{'", "'}'", "'func'", "'var'", "'='", 
      "';'", "'for'", "'if'", "'else'", "'print'", "'return'", "'while'", 
      "'break'", "'continue'", "'.'", "'or'", "'and'", "'!='", "'=='", "'>'", 
      "'>='", "'<'", "'<='", "'-'", "'+'", "'/'", "'*'", "'!'", "'true'", 
      "'false'", "'nil'", "'this'", "'super'", "','"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "WHITESPACE", "NEWLINE", "NUMBER", "STRING_LITERAL", 
      "IDENTIFIER", "ALPHA", "DIGIT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  loxParserStaticData = staticData.release();
}

}

loxParser::loxParser(TokenStream *input) : loxParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

loxParser::loxParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  loxParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *loxParserStaticData->atn, loxParserStaticData->decisionToDFA, loxParserStaticData->sharedContextCache, options);
}

loxParser::~loxParser() {
  delete _interpreter;
}

const atn::ATN& loxParser::getATN() const {
  return *loxParserStaticData->atn;
}

std::string loxParser::getGrammarFileName() const {
  return "lox.g4";
}

const std::vector<std::string>& loxParser::getRuleNames() const {
  return loxParserStaticData->ruleNames;
}

const dfa::Vocabulary& loxParser::getVocabulary() const {
  return loxParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView loxParser::getSerializedATN() const {
  return loxParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

loxParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* loxParser::ProgramContext::EOF() {
  return getToken(loxParser::EOF, 0);
}

std::vector<loxParser::DeclarationContext *> loxParser::ProgramContext::declaration() {
  return getRuleContexts<loxParser::DeclarationContext>();
}

loxParser::DeclarationContext* loxParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<loxParser::DeclarationContext>(i);
}


size_t loxParser::ProgramContext::getRuleIndex() const {
  return loxParser::RuleProgram;
}


loxParser::ProgramContext* loxParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, loxParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7832007339222) != 0)) {
      setState(58);
      declaration();
      setState(63);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(64);
    match(loxParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

loxParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ClassDecContext* loxParser::DeclarationContext::classDec() {
  return getRuleContext<loxParser::ClassDecContext>(0);
}

loxParser::FunDecContext* loxParser::DeclarationContext::funDec() {
  return getRuleContext<loxParser::FunDecContext>(0);
}

loxParser::VarDecContext* loxParser::DeclarationContext::varDec() {
  return getRuleContext<loxParser::VarDecContext>(0);
}

loxParser::StatementContext* loxParser::DeclarationContext::statement() {
  return getRuleContext<loxParser::StatementContext>(0);
}


size_t loxParser::DeclarationContext::getRuleIndex() const {
  return loxParser::RuleDeclaration;
}


loxParser::DeclarationContext* loxParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, loxParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case loxParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(66);
        classDec();
        break;
      }

      case loxParser::T__5: {
        enterOuterAlt(_localctx, 2);
        setState(67);
        funDec();
        break;
      }

      case loxParser::T__6: {
        enterOuterAlt(_localctx, 3);
        setState(68);
        varDec();
        break;
      }

      case loxParser::T__1:
      case loxParser::T__3:
      case loxParser::T__9:
      case loxParser::T__10:
      case loxParser::T__12:
      case loxParser::T__13:
      case loxParser::T__14:
      case loxParser::T__15:
      case loxParser::T__16:
      case loxParser::T__26:
      case loxParser::T__30:
      case loxParser::T__31:
      case loxParser::T__32:
      case loxParser::T__33:
      case loxParser::T__34:
      case loxParser::T__35:
      case loxParser::NUMBER:
      case loxParser::STRING_LITERAL:
      case loxParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 4);
        setState(69);
        statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDecContext ------------------------------------------------------------------

loxParser::ClassDecContext::ClassDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> loxParser::ClassDecContext::IDENTIFIER() {
  return getTokens(loxParser::IDENTIFIER);
}

tree::TerminalNode* loxParser::ClassDecContext::IDENTIFIER(size_t i) {
  return getToken(loxParser::IDENTIFIER, i);
}

std::vector<loxParser::FunctionContext *> loxParser::ClassDecContext::function() {
  return getRuleContexts<loxParser::FunctionContext>();
}

loxParser::FunctionContext* loxParser::ClassDecContext::function(size_t i) {
  return getRuleContext<loxParser::FunctionContext>(i);
}


size_t loxParser::ClassDecContext::getRuleIndex() const {
  return loxParser::RuleClassDec;
}


loxParser::ClassDecContext* loxParser::classDec() {
  ClassDecContext *_localctx = _tracker.createInstance<ClassDecContext>(_ctx, getState());
  enterRule(_localctx, 4, loxParser::RuleClassDec);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(72);
    match(loxParser::T__0);
    setState(73);
    match(loxParser::IDENTIFIER);
    setState(77);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == loxParser::T__1) {
      setState(74);
      match(loxParser::T__1);
      setState(75);
      match(loxParser::IDENTIFIER);
      setState(76);
      match(loxParser::T__2);
    }
    setState(79);
    match(loxParser::T__3);
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == loxParser::IDENTIFIER) {
      setState(80);
      function();
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(86);
    match(loxParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunDecContext ------------------------------------------------------------------

loxParser::FunDecContext::FunDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::FunctionContext* loxParser::FunDecContext::function() {
  return getRuleContext<loxParser::FunctionContext>(0);
}


size_t loxParser::FunDecContext::getRuleIndex() const {
  return loxParser::RuleFunDec;
}


loxParser::FunDecContext* loxParser::funDec() {
  FunDecContext *_localctx = _tracker.createInstance<FunDecContext>(_ctx, getState());
  enterRule(_localctx, 6, loxParser::RuleFunDec);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(88);
    match(loxParser::T__5);
    setState(89);
    function();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDecContext ------------------------------------------------------------------

loxParser::VarDecContext::VarDecContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* loxParser::VarDecContext::IDENTIFIER() {
  return getToken(loxParser::IDENTIFIER, 0);
}

loxParser::ExpressionContext* loxParser::VarDecContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}


size_t loxParser::VarDecContext::getRuleIndex() const {
  return loxParser::RuleVarDec;
}


loxParser::VarDecContext* loxParser::varDec() {
  VarDecContext *_localctx = _tracker.createInstance<VarDecContext>(_ctx, getState());
  enterRule(_localctx, 8, loxParser::RuleVarDec);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(loxParser::T__6);
    setState(92);
    match(loxParser::IDENTIFIER);
    setState(95);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == loxParser::T__7) {
      setState(93);
      match(loxParser::T__7);
      setState(94);
      expression();
    }
    setState(97);
    match(loxParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

loxParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExprStmtContext* loxParser::StatementContext::exprStmt() {
  return getRuleContext<loxParser::ExprStmtContext>(0);
}

loxParser::ForStmtContext* loxParser::StatementContext::forStmt() {
  return getRuleContext<loxParser::ForStmtContext>(0);
}

loxParser::IfStmtContext* loxParser::StatementContext::ifStmt() {
  return getRuleContext<loxParser::IfStmtContext>(0);
}

loxParser::PrintStmtContext* loxParser::StatementContext::printStmt() {
  return getRuleContext<loxParser::PrintStmtContext>(0);
}

loxParser::ReturnStmtContext* loxParser::StatementContext::returnStmt() {
  return getRuleContext<loxParser::ReturnStmtContext>(0);
}

loxParser::WhileStmtContext* loxParser::StatementContext::whileStmt() {
  return getRuleContext<loxParser::WhileStmtContext>(0);
}

loxParser::BreakStmtContext* loxParser::StatementContext::breakStmt() {
  return getRuleContext<loxParser::BreakStmtContext>(0);
}

loxParser::ContinueStmtContext* loxParser::StatementContext::continueStmt() {
  return getRuleContext<loxParser::ContinueStmtContext>(0);
}

loxParser::BlockContext* loxParser::StatementContext::block() {
  return getRuleContext<loxParser::BlockContext>(0);
}


size_t loxParser::StatementContext::getRuleIndex() const {
  return loxParser::RuleStatement;
}


loxParser::StatementContext* loxParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 10, loxParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(108);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case loxParser::T__1:
      case loxParser::T__26:
      case loxParser::T__30:
      case loxParser::T__31:
      case loxParser::T__32:
      case loxParser::T__33:
      case loxParser::T__34:
      case loxParser::T__35:
      case loxParser::NUMBER:
      case loxParser::STRING_LITERAL:
      case loxParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(99);
        exprStmt();
        break;
      }

      case loxParser::T__9: {
        enterOuterAlt(_localctx, 2);
        setState(100);
        forStmt();
        break;
      }

      case loxParser::T__10: {
        enterOuterAlt(_localctx, 3);
        setState(101);
        ifStmt();
        break;
      }

      case loxParser::T__12: {
        enterOuterAlt(_localctx, 4);
        setState(102);
        printStmt();
        break;
      }

      case loxParser::T__13: {
        enterOuterAlt(_localctx, 5);
        setState(103);
        returnStmt();
        break;
      }

      case loxParser::T__14: {
        enterOuterAlt(_localctx, 6);
        setState(104);
        whileStmt();
        break;
      }

      case loxParser::T__15: {
        enterOuterAlt(_localctx, 7);
        setState(105);
        breakStmt();
        break;
      }

      case loxParser::T__16: {
        enterOuterAlt(_localctx, 8);
        setState(106);
        continueStmt();
        break;
      }

      case loxParser::T__3: {
        enterOuterAlt(_localctx, 9);
        setState(107);
        block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprStmtContext ------------------------------------------------------------------

loxParser::ExprStmtContext::ExprStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExpressionContext* loxParser::ExprStmtContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}


size_t loxParser::ExprStmtContext::getRuleIndex() const {
  return loxParser::RuleExprStmt;
}


loxParser::ExprStmtContext* loxParser::exprStmt() {
  ExprStmtContext *_localctx = _tracker.createInstance<ExprStmtContext>(_ctx, getState());
  enterRule(_localctx, 12, loxParser::RuleExprStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    expression();
    setState(111);
    match(loxParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForStmtContext ------------------------------------------------------------------

loxParser::ForStmtContext::ForStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::BlockContext* loxParser::ForStmtContext::block() {
  return getRuleContext<loxParser::BlockContext>(0);
}

loxParser::VarDecContext* loxParser::ForStmtContext::varDec() {
  return getRuleContext<loxParser::VarDecContext>(0);
}

loxParser::ExprStmtContext* loxParser::ForStmtContext::exprStmt() {
  return getRuleContext<loxParser::ExprStmtContext>(0);
}

std::vector<loxParser::ExpressionContext *> loxParser::ForStmtContext::expression() {
  return getRuleContexts<loxParser::ExpressionContext>();
}

loxParser::ExpressionContext* loxParser::ForStmtContext::expression(size_t i) {
  return getRuleContext<loxParser::ExpressionContext>(i);
}


size_t loxParser::ForStmtContext::getRuleIndex() const {
  return loxParser::RuleForStmt;
}


loxParser::ForStmtContext* loxParser::forStmt() {
  ForStmtContext *_localctx = _tracker.createInstance<ForStmtContext>(_ctx, getState());
  enterRule(_localctx, 14, loxParser::RuleForStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(113);
    match(loxParser::T__9);
    setState(114);
    match(loxParser::T__1);
    setState(118);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case loxParser::T__6: {
        setState(115);
        varDec();
        break;
      }

      case loxParser::T__1:
      case loxParser::T__26:
      case loxParser::T__30:
      case loxParser::T__31:
      case loxParser::T__32:
      case loxParser::T__33:
      case loxParser::T__34:
      case loxParser::T__35:
      case loxParser::NUMBER:
      case loxParser::STRING_LITERAL:
      case loxParser::IDENTIFIER: {
        setState(116);
        exprStmt();
        break;
      }

      case loxParser::T__8: {
        setState(117);
        match(loxParser::T__8);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(121);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7832007081988) != 0)) {
      setState(120);
      expression();
    }
    setState(123);
    match(loxParser::T__8);
    setState(125);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7832007081988) != 0)) {
      setState(124);
      expression();
    }
    setState(127);
    match(loxParser::T__8);
    setState(128);
    match(loxParser::T__2);
    setState(129);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStmtContext ------------------------------------------------------------------

loxParser::IfStmtContext::IfStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExpressionContext* loxParser::IfStmtContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}

std::vector<loxParser::BlockContext *> loxParser::IfStmtContext::block() {
  return getRuleContexts<loxParser::BlockContext>();
}

loxParser::BlockContext* loxParser::IfStmtContext::block(size_t i) {
  return getRuleContext<loxParser::BlockContext>(i);
}


size_t loxParser::IfStmtContext::getRuleIndex() const {
  return loxParser::RuleIfStmt;
}


loxParser::IfStmtContext* loxParser::ifStmt() {
  IfStmtContext *_localctx = _tracker.createInstance<IfStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, loxParser::RuleIfStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    match(loxParser::T__10);
    setState(132);
    match(loxParser::T__1);
    setState(133);
    expression();
    setState(134);
    match(loxParser::T__2);
    setState(135);
    block();
    setState(138);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == loxParser::T__11) {
      setState(136);
      match(loxParser::T__11);
      setState(137);
      block();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStmtContext ------------------------------------------------------------------

loxParser::PrintStmtContext::PrintStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExpressionContext* loxParser::PrintStmtContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}


size_t loxParser::PrintStmtContext::getRuleIndex() const {
  return loxParser::RulePrintStmt;
}


loxParser::PrintStmtContext* loxParser::printStmt() {
  PrintStmtContext *_localctx = _tracker.createInstance<PrintStmtContext>(_ctx, getState());
  enterRule(_localctx, 18, loxParser::RulePrintStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(140);
    match(loxParser::T__12);
    setState(141);
    expression();
    setState(142);
    match(loxParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStmtContext ------------------------------------------------------------------

loxParser::ReturnStmtContext::ReturnStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExpressionContext* loxParser::ReturnStmtContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}


size_t loxParser::ReturnStmtContext::getRuleIndex() const {
  return loxParser::RuleReturnStmt;
}


loxParser::ReturnStmtContext* loxParser::returnStmt() {
  ReturnStmtContext *_localctx = _tracker.createInstance<ReturnStmtContext>(_ctx, getState());
  enterRule(_localctx, 20, loxParser::RuleReturnStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(144);
    match(loxParser::T__13);
    setState(146);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7832007081988) != 0)) {
      setState(145);
      expression();
    }
    setState(148);
    match(loxParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileStmtContext ------------------------------------------------------------------

loxParser::WhileStmtContext::WhileStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExpressionContext* loxParser::WhileStmtContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}

loxParser::BlockContext* loxParser::WhileStmtContext::block() {
  return getRuleContext<loxParser::BlockContext>(0);
}


size_t loxParser::WhileStmtContext::getRuleIndex() const {
  return loxParser::RuleWhileStmt;
}


loxParser::WhileStmtContext* loxParser::whileStmt() {
  WhileStmtContext *_localctx = _tracker.createInstance<WhileStmtContext>(_ctx, getState());
  enterRule(_localctx, 22, loxParser::RuleWhileStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(150);
    match(loxParser::T__14);
    setState(151);
    match(loxParser::T__1);
    setState(152);
    expression();
    setState(153);
    match(loxParser::T__2);
    setState(154);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BreakStmtContext ------------------------------------------------------------------

loxParser::BreakStmtContext::BreakStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t loxParser::BreakStmtContext::getRuleIndex() const {
  return loxParser::RuleBreakStmt;
}


loxParser::BreakStmtContext* loxParser::breakStmt() {
  BreakStmtContext *_localctx = _tracker.createInstance<BreakStmtContext>(_ctx, getState());
  enterRule(_localctx, 24, loxParser::RuleBreakStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(156);
    match(loxParser::T__15);
    setState(157);
    match(loxParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ContinueStmtContext ------------------------------------------------------------------

loxParser::ContinueStmtContext::ContinueStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t loxParser::ContinueStmtContext::getRuleIndex() const {
  return loxParser::RuleContinueStmt;
}


loxParser::ContinueStmtContext* loxParser::continueStmt() {
  ContinueStmtContext *_localctx = _tracker.createInstance<ContinueStmtContext>(_ctx, getState());
  enterRule(_localctx, 26, loxParser::RuleContinueStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(159);
    match(loxParser::T__16);
    setState(160);
    match(loxParser::T__8);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

loxParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<loxParser::DeclarationContext *> loxParser::BlockContext::declaration() {
  return getRuleContexts<loxParser::DeclarationContext>();
}

loxParser::DeclarationContext* loxParser::BlockContext::declaration(size_t i) {
  return getRuleContext<loxParser::DeclarationContext>(i);
}


size_t loxParser::BlockContext::getRuleIndex() const {
  return loxParser::RuleBlock;
}


loxParser::BlockContext* loxParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 28, loxParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(162);
    match(loxParser::T__3);
    setState(166);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 7832007339222) != 0)) {
      setState(163);
      declaration();
      setState(168);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(169);
    match(loxParser::T__4);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

loxParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::AssignmentContext* loxParser::ExpressionContext::assignment() {
  return getRuleContext<loxParser::AssignmentContext>(0);
}


size_t loxParser::ExpressionContext::getRuleIndex() const {
  return loxParser::RuleExpression;
}


loxParser::ExpressionContext* loxParser::expression() {
  ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, getState());
  enterRule(_localctx, 30, loxParser::RuleExpression);
